re PR fortran/39791 (Bad Dwarf debug information from gfortran for a character string.)

2009-04-24  Tobias Burnus  <burnus@net-b.de>

        PR fortran/39791
        Backport from mainline:

        2008-08-22  Jakub Jelinek  <jakub@redhat.com>

        * dwarf2out.c (add_subscript_info): Stop on Fortran
        * TYPE_STRING_FLAG
        types.
        (gen_array_type_die): Emit DW_TAG_string_type for Fortran
        character types.

From-SVN: r146672